GROK-18977: Activity dashboard: Fixed text overlapping on window reduced width

--- a/packages/PowerPack/css/power-pack.css
+++ b/packages/PowerPack/css/power-pack.css
@@ -61,6 +61,7 @@
 
 div.ui-box > div.power-pack-activity-widget-content.ui-div.ui-panel {
     overflow: hidden !important;
+    padding-bottom: 6px;
 }
 
 .power-pack-activity-widget-subwidget-list-content {
@@ -79,7 +80,7 @@ div.ui-box > div.power-pack-activity-widget-content.ui-div.ui-panel {
 
 .power-pack-activity-widget-content .d4-tab-host.d4-tab-vertical .d4-tab-content {
     overflow: scroll;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 .power-pack-activity-widget-content .d4-tab-host.d4-tab-vertical .d4-tab-content .d4-flex-col > .d4-entity-markup-row {
@@ -160,13 +161,12 @@ div.ui-box > div.power-pack-activity-widget-content.ui-div.ui-panel {
 .power-pack-activity-widget-spotlight-tip {
     flex-basis: 100%;
     position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 20px;
+    bottom: 8px;
+    left: 8px;
 }
 
 .power-pack-activity-widget-spotlight-tip .tip-prev {
-    margin-right: 5px;
+    margin-right: 4px;
 }
 
 .power-pack-activity-widget-spotlight-tip .tip-prev.tip-prev-hidden {
@@ -175,7 +175,7 @@ div.ui-box > div.power-pack-activity-widget-content.ui-div.ui-panel {
 }
 
 .power-pack-activity-widget-spotlight-tip .tip-next {
-    margin-left: 5px;
+    margin-left: 4px;
 }
 
 .power-pack-activity-widget-spotlight-tip .tip-prev,
